--- a/css/style.css
+++ b/css/style.css
@@ -113,15 +113,15 @@ html {
     font-weight: 500;
     font-size: 8px;
     letter-spacing: 1px;
-    color: #000;
     text-align: center;
     background-color: rgba(255, 255, 255, 0.5);
     border: 1px solid #E9E9E9;
     border-radius: 50px;
-    padding: 5px 10px;
+    padding: 1px 10px;
   }
   a {
     text-decoration: none;
+    color: rgba(255, 255, 255, 0.9);
   }
   .oval i {
     display: none;
@@ -246,7 +246,6 @@ html {
     font-weight: normal;
     line-height: 16px;
     font-size: 13px;
-    margin-left: 5px;
     text-align: center;
     letter-spacing: 1.63px;
   }
@@ -257,7 +256,6 @@ html {
     font-weight: normal;
     line-height: 16px;
     font-size: 13px;
-    margin-left: 5px;
     text-align: center;
     letter-spacing: 1.63px;
   }
